# envctl

./: .arch-policies.toml  .cgcignore  .envctl-commit-message.md  .envctl-test  .envctl.example  .gitignore  AGENTS.md  LICENSE  MAIN_TASK-old.md  MAIN_TASK.md  OLD_TASK_1.md  OLD_TASK_2.md  OLD_TASK_3.md  OLD_TASK_5.md  OLD_TASK_6.md  OLD_TASK_7.md  OLD_TASK_8.md  OLD_TASK_9.md  README.md  RELEASE_NOTES_1.1.0.md  TODO.md  basedpyright-baseline.json  codegraph.toml  pyproject.toml  pyrightconfig.json  sitecustomize.py
.envctl-state/: worktree-provenance.json
.serena/: project.yml
.sisyphus/: ralph-loop.local.md
contracts/: envctl-shell-ownership-ledger.json  python_engine_parity_manifest.json  python_runtime_gap_report.json  runtime_feature_matrix.json
docs/: README.md  architecture.md  commands.md  configuration.md  contributing.md  dummy-file.txt  important-flags.md  license.md  playbooks.md  storage-consumption-report.md  storage-likely-unused.md  troubleshooting.md
envctl_engine/: __init__.py
lib/: envctl.sh
python/: requirements.txt
scripts/: _bootstrap.py  analyze_debug_bundle.py  audit_command_router_vs_shell.py  benchmark_startup_matrix.py  generate_python_engine_parity_manifest.py  generate_python_runtime_gap_plan.py  generate_python_runtime_gap_report.py  generate_runtime_feature_matrix.py  generate_shell_ownership_ledger.py  prepare_release.py  python_cleanup.py  release_shipability_gate.py  report_unmigrated_shell.py  storage_cleanup_candidates.sh  test_suite_inventory.py  verify_shell_prune_contract.py
tests/: __init__.py
todo/: TODO.md  (+1 more)
(+1568 files in other folders)
