[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "envctl"
version = "1.0.0"
description = "CLI for bringing up full local environments across a main repository and many worktrees."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12,<3.15"
authors = [
  {name = "envctl maintainers"},
]
license = {text = "All rights reserved."}
dependencies = [
  "prompt_toolkit>=3.0",
  "psutil>=5.9",
  "rich>=13.7",
  "textual>=0.58",
]

[project.scripts]
envctl = "envctl_engine.runtime.cli:main"

[project.urls]
Documentation = "https://github.com/kfiramar/envctl"
Repository = "https://github.com/kfiramar/envctl"

[tool.setuptools]
package-dir = {"" = "python"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["python"]
include = ["envctl_engine*"]

[tool.setuptools.package-data]
envctl_engine = [
  "assets/dependency_compose/*/*.yml",
  "assets/dependency_compose/*/*.yaml",
  "assets/dependency_compose/*/*/*.sql",
  "runtime/prompt_templates/*.md",
  "test_output/*.mjs",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
extend-select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
"tests/python/**/*.py" = ["E402", "E501"]
"scripts/*.py" = ["E402"]
"python/envctl_engine/state/models.py" = ["F811"]
"python/envctl_engine/runtime_feature_inventory.py" = ["E501"]
"python/envctl_engine/debug/debug_bundle_diagnostics.py" = ["E501"]
